<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mail"
            android:icon="@drawable/icon_mail"
            android:title="@string/menu_mail" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/icon_contact"
            android:title="@string/menu_contacts" />
        <item
            android:id="@+id/nav_works"
            android:icon="@drawable/icon_works"
            android:title="@string/menu_works" />
        <item
            android:id="@+id/nav_board"
            android:icon="@drawable/icon_board"
            android:title="@string/menu_board" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/icon_calendar"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_community"
            android:icon="@drawable/icon_community"
            android:title="@string/menu_community" />
        <item
            android:id="@+id/nav_reserve"
            android:icon="@drawable/icon_reservation"
            android:title="@string/menu_reserve" />
        <item
            android:id="@+id/nav_approval"
            android:icon="@drawable/icon_approval"
            android:title="@string/menu_approval" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/icon_report"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/icon_task"
            android:title="@string/menu_task" />
        <item
            android:id="@+id/nav_survey"
            android:icon="@drawable/icon_survey"
            android:title="@string/menu_survey" />
        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/icon_todo"
            android:title="@string/menu_todo" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/icon_ehr"
            android:title="@string/menu_attendance" />
        <item
            android:id="@+id/nav_docs"
            android:icon="@drawable/icon_docs"
            android:title="@string/menu_docs" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pc"
            android:icon="@drawable/icon_pc"
            android:title="@string/menu_pc" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/icon_setting"
            android:title="@string/menu_setting" />
    </group>
</menu>
